--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.5.1",
     "astro": "^5.13.5",
+    "node-vibrant": "^4.0.3",
     "sharp": "^0.34.2"
   }
 }
