--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "sync-images": "node scripts/sync-images.js"
+    "sync-images": "node scripts/sync-images.js",
+    "sync-data": "node scripts/sync-data.js"
   },
   "dependencies": {
     "@astrojs/rss": "^4.0.12",
